# internal/server/ogen/oas_parameters_gen.go
@@ -84,6 +84,7 @@ func decodeGetPlayerStateUIDParams(args [1]string, argsEscaped bool, r *http.Req
 // PingParams is parameters of ping operation.
 type PingParams struct {
 	XRequestID int64
+	XAPIUser   int64
 }
 
 func unpackPingParams(packed middleware.Parameters) (params PingParams) {
@@ -93,6 +94,13 @@ func unpackPingParams(packed middleware.Parameters) (params PingParams) {
 			In:   "header",
 		}
 		params.XRequestID = packed[key].(int64)
+	}
+	{
+		key := middleware.ParameterKey{
+			Name: "X-API-User",
+			In:   "header",
+		}
+		params.XAPIUser = packed[key].(int64)
 	}
 	return params
 }
@@ -147,6 +155,58 @@ func decodePingParams(args [0]string, argsEscaped bool, r *http.Request) (params
 	}(); err != nil {
 		return params, &ogenerrors.DecodeParamError{
 			Name: "X-Request-ID",
+			In:   "header",
+			Err:  err,
+		}
+	}
+	// Decode header: X-API-User.
+	if err := func() error {
+		cfg := uri.HeaderParameterDecodingConfig{
+			Name:    "X-API-User",
+			Explode: false,
+		}
+		if err := h.HasParam(cfg); err == nil {
+			if err := h.DecodeParam(cfg, func(d uri.Decoder) error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToInt64(val)
+				if err != nil {
+					return err
+				}
+
+				params.XAPIUser = c
+				return nil
+			}); err != nil {
+				return err
+			}
+			if err := func() error {
+				if err := (validate.Int{
+					MinSet:        true,
+					Min:           1,
+					MaxSet:        false,
+					Max:           0,
+					MinExclusive:  false,
+					MaxExclusive:  false,
+					MultipleOfSet: false,
+					MultipleOf:    0,
+					Pattern:       nil,
+				}).Validate(int64(params.XAPIUser)); err != nil {
+					return errors.Wrap(err, "int")
+				}
+				return nil
+			}(); err != nil {
+				return err
+			}
+		} else {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "X-API-User",
 			In:   "header",
 			Err:  err,
 		}
