# internal/server/ogen/oas_response_encoders_gen.go
@@ -122,7 +122,7 @@ func encodePingResponse(response PingRes, w http.ResponseWriter, span trace.Span
 
 		return nil
 
-	case *Error:
+	case *ErrorResponse:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(401)
 		span.SetStatus(codes.Error, http.StatusText(401))
